// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CSidebarToggler customize 1`] = `
<div>
  <button
    class="sidebar-toggler bazinga"
  >
    Test
  </button>
</div>
`;

exports[`loads and displays CSidebarToggler component 1`] = `
<div>
  <button
    class="sidebar-toggler"
  />
</div>
`;
